--- a/Introduction.tex
+++ b/Introduction.tex
@@ -3,17 +3,17 @@
 
 
 	What does it mean to learn? This is an important question to raise within the subject of artificial intelligence.
-	In science we learn and discover something new everyday, as such we have built frameworks for how this learning and discovery should be conducted. From this we believe that by building on already fundamental scientific methods, we may simplify how an artificial intelligence should learn.
+	In science we learn and discover something new every day, as such we have built frameworks for how this learning and discovery should be conducted. From this we believe that by building on already fundamental scientific methods, we may simplify how an artificial intelligence should learn.
 	
 	The first question we should ask ourselves is: How can we perform an experiment and know exactly what we have learned from it, 
-	and how we can use this knowledge to develop further experiments highlighting another aspect of the field we are trying to learn.
+	and how can we use this knowledge to develop further experiments highlighting another aspect of the field we are trying to learn?
 	Both of these questions turns out to be very interesting when it comes to AI learning.
 	
 	This means that research done on science and scientific understanding is equally relevant in the context of making an agent able to learn.
 	As some of these concepts are greater than we are able to cover in this thesis, we have decided to limit ourselves to just planning domains.	 
 	Planning as a field of study deals with the idea that an agent knows what it is capable of, 
 	and from there must be able to achieve a desired goal. 
-	We wish to look at the problem from the opposite side, what if an agent knows nothing it is capable of and instead must learn through induction what it can achieve. 
+	We wish to look at the problem from the opposite side: What if an agent knows nothing, and instead must learn through induction what it can achieve. 
 	This is interesting as it parallels the experience of an infant, when it is initially born  --- ignoring genetic memory --- such an infant should have no prior knowledge, and therefore must use inductive reasoning to begin to understand how it can act upon its environment. For each action it takes the more knowledge it will have of its capabilities, however only through failures may it learn its limitations this is a provable fact.
 	 
 	
