--- a/NonConditional/HypothesisConstruction.tex
+++ b/NonConditional/HypothesisConstruction.tex
@@ -1,5 +1,6 @@
-\documentclass[../Master.tex]{subfiles}
 \providecommand{\master}{..}
+\documentclass[\master/Master.tex]{subfiles}
+
 \begin{document}
 
 
@@ -11,23 +12,14 @@
 	In Chapter~\ref{sec:Learning} we went through examples of different strategies in this section we will show how that can be put to practice for STRIPS-style action schema, and what it means to the action schema itself.
 	Furthermore, this section will also show the dichotomy between using unproven preconditions and unproven effects and how to manipulate the traits of a given strategy by changing these.
 
-	The knowledge we can construct these hypothetical action schemas from are the following: 
-	For precondition construction:
-
-	\begin{itemize}
-		\item Disproven preconditions $D_P$
-		\item Proven preconditions $K_P$
-		\item Unproven preconditions $U_P$ as $U_P = \mathbb{P} \setminus (K_P \cup D_P)$
-		\item Candidates preconditions $C_P$
-	\end{itemize}
-
-	and for effect construction:
-
-	\begin{itemize}
-		\item Disproven effects $D_E$
-		\item Proven effects $K_E$
-		\item Unproven effects $U_E$ as $U_E = \mathbb{P} \setminus (K_E \cup D_E)$
-	\end{itemize}
+	As both preconditions and effects use \Pro, \Dsp and \Up we use that notation of saying $\Dsp_P$, $\Pro_P$ $\dots$ for preconditions and
+	$\Dsp_E$, $\Pro_E$ $\dots$ for effects.
+	
+	Furthermore, the unproven \Up --- preconditions or effects --- follows from the \Cref{inv:nca:mutual-ex}.
+	
+	\begin{equation}
+		 U = \lits \setminus (\Pro \cup \Dsp)
+	\end{equation}
 
 \subsubsection{Trait: Explorative/Exploitative}
 
@@ -64,7 +56,7 @@
 	Conversely as the agent becomes more help-seeking the risk of the hypothesis making N-PPMs increases.
 
 	The help itself may come in a variety  of different mechanism.
-	For instance, in \cite{Walsh2008} they proposed a teacher that for the an initial state $S_0$ and a goal $\mathcal{G}$ provides all the transitions $(s,a,s') \in T$, where $T$ is a trace, which leads to the solution of $\mathcal{G}$,
+	For instance, in \cite{Walsh2008} they proposed a teacher that for the an initial state $S_0$ and a goal $\goal$ provides all the transitions $(S,a,S') \in T$, where $T$ is a trace, which leads to the solution of $\goal$,
 	 thereby solving the problem for the agent when the it is incapable.
 	The agent can then use this information to learn enough about the action schema, such that it can solve this exact goal in the future.
 	As we primarily focus on learning through induction rather than deductive methods, we will assume that there exists such a mechanism that can teach a help-seeking agent;
@@ -95,6 +87,7 @@
 		\begin{equation*}
 			\begin{split}
 				Action ~ A &(x, y) \\
+					\lits&: \{ p(x,x), p(x,y), p(y,x), p(y,y) \} \\
 					pre&: \{\} \\
 					eff&: \{p(x,y)\}			
 			\end{split}
@@ -103,9 +96,9 @@
 		and a STRIPS-style domain.
 		\begin{equation*}
 			\begin{split}
-				\mathbb{P} &= \{p(x,y), p(y,x), p(x,x), p(y,y)\}		\\
-				Objects~O &= \{o_1,o_2,...,o_{n-1},o_n\} \\
-				Goal~\mathcal{G} &= \{p(o_1,o_1)\} \\
+				\preds &= \{p\}		\\
+				Objects~\objs &= \{O_1,O_2,...,O_{n-1},O_n\} \\
+				Goal~\goal &= \{p(O_1,O_1)\} \\
 				S_0 &=\{\}
 			\end{split}
 		\end{equation*}
@@ -115,14 +108,14 @@
 		\begin{equation*}
 			\begin{split}				
 				Trace~T &= (S_0,A(o_1,o_1),S_1) \\
-				S_1 &= \{p(o_1,o_1)\}				
+				S_1 &= \{p(O_1,O_1)\}				
 			\end{split}
 		\end{equation*}
 		
-		However because the action used was $A(o_1,o_1)$ neither of the predicates in $\mathbb{P}$ can be proved as effects, as it could have been any of those given all we observe is $\{p(o_1,o_1)\}$. 
+		However because the action used was $A(O_1,O_1)$ neither of the literals in $\lits$ can be proved as effects, as it could have been any of those given all we observe is $\{p(O_1,O_1)\}$. 
 		As such if we used the pessimistic action schema proposed by \cite{Walsh2008}, no effects would be added to the hypothetical action schema, and therefore the agent would unable to reproduce the plan. 
 		
-		Lastly it is important to note that using all the unproven effects instead would not result in a PPM as they all become $\{p(o_1,o_1)\}$ when applied.
+		Lastly it is important to note that using all the unproven effects instead would not result in a PPM as they all become $\{p(O_1,O_1)\}$ when applied.
 		
 	\end{example}
 	
@@ -130,8 +123,8 @@
 	As such this solution would be:
 		\begin{equation}
 			\begin{split}			
-				preconditions&= \bigwedge\limits_{k \in K_P \cup U_P} k \\
-				effects&=  K_E \cup U_E
+				preconditions&= \bigwedge\limits_{\pro \in \Pro_P \cup \Up_P} k \\
+				effects&=  \Pro_E \cup \Up_E
 			\end{split}
 		\end{equation}
 	This approach will allow negative goals along with negative preconditions. 
@@ -150,12 +143,13 @@
 	This is accomplished by selecting one subset of the non-disproved preconditions and use that until the planner returns "no plan" and thereafter discarding it along with precondition subsets that satisfied it.
 
 	We propose that preconditions are constructed based on our knowledge instead.
-	The candidates $C$ contain information about single instances of precondition combinations that has been shown to give a failure;
+	The set of candidate sets $\cset$ contain information about single instances of precondition combinations that has been shown to give a failure;
 	thus by placing them in CNF in the action schema we guarantee that states which contain those specific predicate combination cannot have the action applied to it.
-	Furthermore, we have the $K_P$ that contain the proven preconditions, as such combining the two we get:
+	Furthermore, we have the $\Pro_P$ that contain the proven preconditions, as such combining the two we get:
 
 	\begin{equation} \label{eq:nca:opt-preconds}
-		preconditions = \bigwedge\limits_{k \in K_P} k \quad \land \quad  \bigwedge \limits_{c \in C_P} \left( \bigvee \limits_{p \in c} p\right)
+		preconditions = 
+		\bigwedge\limits_{\pro \in \Pro_P} k ~ \land ~ \bigwedge \limits_{\Cand \in \cset} \left( \bigvee \limits_{p \in \Cand} p\right)
 	\end{equation}
 
 	Notice that this requires the planner to support disjunctive preconditions.
@@ -169,26 +163,26 @@
 	\end{equation}
 
     In order for this to work the planner must support three valued logic \cite{putnam1957a}, or planning with spurious actions (see~\cite{Russell}).
-	Such a planner would, when encountering an effect $p$ in an effect set $E$ that is to be added and deleted (is spurious), add it to a special undefined set $\mathcal{X}$.
-	If however the effect is not spurious meaning it is either positive or negative then it is removed from $\mathcal{X}$.
+	Such a planner would, when encountering an effect $p$ in an effect set \geffects that is to be added and deleted (is spurious), add it to a special undefined set $\undefset$.
+	If however the effect is not spurious meaning it is either positive or negative then it is removed from $\undefset$.
 
 			\begin{equation}
 				\begin{split}
-					Spurious~E_S &= \{ p \mid p \in E \land \neg p \in E \} \\
-					Non\text{-}Spurious~E_{NS} &= \{ p \mid (p \in E \land \neg p \notin E ) \lor (p \notin E \land \neg p \in E )  \}\\
-					Undefined~set~\mathcal{X}' &= \mathcal{X} \cup E_S \setminus E_{NS}
+					Spurious~\geffects_{spur} &= \{ p \mid p \in \geffects \land \neg p \in \geffects \} \\
+					Non\text{-}Spurious~\geffects_{non\texttt{-}spur} &= \{ p \mid (p \in \geffects \land \neg p \notin \geffects ) \lor (p \notin \geffects \land \neg p \in \geffects )  \}\\
+					Undefined~set~\undefset' &= \undefset \cup \geffects_{spur} \setminus \geffects_{non\texttt{-}spur}
 				\end{split}
 			\end{equation}
-	For the purposes of checking whether the goal is solved, each predicate in $\mathcal{X}$ is considered as both being positive and negative.
-	For instance if the goal is $\mathcal{G} = \{at(t1), \neg at(t2)\}$ and $\mathcal{X} = \{at(t1), at(t2)\}$ then that goal is deemed solved by the planner.
+	For the purposes of checking whether the goal is solved, each literal in $\undefset$ is considered as both being positive and negative.
+	For instance if the goal is $\goal = \{at(t1), \neg at(t2)\}$ and $\undefset = \{at(t1), at(t2)\}$ then that goal is deemed solved by the planner.
 
 	\begin{example}
 		This example will show how to construct an optimistic hypothesis, using knowledge from a sokoban domain.
 		Assume we have the following knowledge for action an \texttt{move-h}:
 		 	\begin{equation*}
 			 	\begin{split}
-				 	K_P & = \left\{\texttt{hAdj}(from, to) \right\} \\
-					C_P& =	\left\{
+				 	\Pro_P & = \left\{\texttt{hAdj}(from, to) \right\} \\
+					\cset& =	\left\{
 							\begin{gathered}
 								\left\{
 								\begin{gathered}
@@ -203,14 +197,14 @@
 							\end{gathered}
 							\right\}
 				 	\\
-				 	K_E& =
+				 	\Pro_E& =
 						 	\left\{
 						 	\begin{gathered}
 							 	\neg\texttt{sokobanAt}(from)
 						 	\end{gathered}
 						 	\right\}
 					\\
-				 	U_E& =
+				 	\Up_E& =
 					 	\left\{
 					 	\begin{gathered}
 						 	\texttt{sokobanAt}(to),
@@ -251,16 +245,16 @@ A Confident strategy, as we have defined it, have the traits \texttt{Exploitativ
 this means the hypothetical action schema will avoid both making F-PPMs and N-PPMs. 
 
 To accomplish this, our hypothesis will only use preconditions that have been proven.
-For effect construction, it will initially use many predicates while the agent is ignorant, and fewer as it becomes more knowledgeable. 
+For effect construction, it will initially use many literals while the agent is ignorant, and fewer as it becomes more knowledgeable. 
 
 The preconditions \eqref{eq:nca:opt-preconds} from the optimistic strategy will suffice for this purpose, and obviously the requirements for the planner will remain the same.
 
 For the effects we propose to use unproven and proven effects for an action with the removal of proven effects from other actions. 
 As such this strategy unlike the other strategies takes into account all actions of the agent.
-Let $K_{E_1},K_{E_2},\ldots,K_{E_n}$ be the proven effects of the other actions, thus the effects of the action in question would be.
+Let $\Pro_{E_1},\Pro_{E_2},\dots,\Pro_{E_n}$ be the proven effects of the other actions, thus the effects of the action in question would be.
 
 \begin{equation}
-		effects = \left( U_E \setminus \bigcup \limits_{i = 1} ^n K_{E_i} \right) \cup K_E
+		effects = \left( \Up_E \setminus \bigcup \limits_{i = 1} ^n \Pro_{E_i} \right) \cup \Pro_E
 \end{equation}
 
 This schema would be \texttt{Exploitative} in the sense that once one action was capable of producing an effect then no other action would be explored for that purpose. 
