--- a/Conditional.tex
+++ b/Conditional.tex
@@ -10,16 +10,16 @@
 \section{Hypergraph introduction}
     \subfile{Conditional/ExplainOurModels}
 
-\section{Hyper graph construction from state}
-	\subfile{Conditional/HyperGraphConstructionFromState}
-
-\section{Hyper graph merging algorithm}
-    \subfile{Conditional/HyperGraphMergingAlgorithm}\label{sec:C:HGMerging}
-
-\section{Collapsing hypergraphs}
-	\subfile{Conditional/CollapsingHypergraphs}
-
-\section{Hypothesis construction}
-	\subfile{Conditional/ConditionalHypothesisConstruction}
+% \section{Hyper graph construction from state}
+% 	\subfile{Conditional/HyperGraphConstructionFromState}
+%
+% \section{Hyper graph merging algorithm}
+%     \subfile{Conditional/HyperGraphMergingAlgorithm}
+%
+% \section{Collapsing hypergraphs}
+% 	\subfile{Conditional/CollapsingHypergraphs}
+%
+% \section{Hypothesis construction}
+% 	\subfile{Conditional/ConditionalHypothesisConstruction}
 
 \end{document}
