--- a/Learning/introductionToLearning.tex
+++ b/Learning/introductionToLearning.tex
@@ -21,7 +21,7 @@
 A natural question in this context is, why is it necessary to define approaches to learning, such as the optimistic and pessimistic ones? Is learning not a universal concept? The answer is that while the acquisition of knowledge in itself remains the same no matter the approach, there are multiple approaches to getting into a situation where new knowledge is available. The frequency with which new knowledge is obtained, and the relevance of said knowledge relies heavily on the approach taken.
 
 \begin{example}
-    Consider two programmers tasked with implementing a complicated animation. Both only know the programming language $X$, but have no experience with graphics programming. Programmer $A$ implements the animation in language $X$, complementing his existing knowledge with books and tutorials when in doubt. Programmer $B$ takes a different approach, trying out several different languages and methodologies before finally discovering that language $W$ is the most useable for his needs. By focussing his learning on the graphics element, $A$ is able to quickly and efficiently sove the task. $B$ has solved the task more elegantly, and has obtained knowledge which may be relevant in similar programming tasks, but has taken considerably longer.
+    Consider two programmers tasked with implementing a complicated animation. Both know the programming language $J$, but have no experience with graphics programming. Programmer $A$ implements the animation in language $J$, complementing his existing knowledge with books and tutorials only when in doubt. Programmer $B$ takes a different approach, trying out several different languages and methodologies before finally discovering that language $H$ is the most useable for his needs. By focussing his learning on the graphics element, $A$ is able to quickly and efficiently sove the task. $B$ has solved the task more elegantly, and has obtained knowledge which may be relevant in similar programming tasks, but has taken considerably longer.
 \end{example}
 
 % 	However we want to raise the question why is it necessary to define approaches to learning, is learning not a universal concept?
