--- a/Master.tex
+++ b/Master.tex
@@ -178,6 +178,8 @@
 \appendix
 \chapter{PDDL}\label{sec:app:pddl}
     \subfile{Appendices/PDDL}
+\chapter{Conditional learning with hypergraphs}
+    \subfile{Appendices/Hypergraph}
 \chapter{Results}\label{sec:app:results}
     \subfile{Appendices/Results}
 %-----------
