--- a/Conditional.tex
+++ b/Conditional.tex
@@ -7,6 +7,9 @@
 \section{Learning conditional effects}
     \subfile{Conditional/DifficulitiesLearningConditionEffects}
 
+\section{Hypothesis construction}
+    \subfile{Conditional/HypothesisConstruction}
+
 \section{Hypergraph introduction}
     \subfile{Conditional/ExplainOurModels}
 
