--- a/Conditional/ExplainOurModels.tex
+++ b/Conditional/ExplainOurModels.tex
@@ -41,6 +41,10 @@ As the graph can be meaningfully partitioned into complete subgraphs, the vertic
 
 A hypergraph constructed from a set of connecting paths contains $O\left(|\mathcal{O}|^m\right)$ vertices and $O\left( |\mathcal{O}|^m\right)$ hyperedges, where $m$ is the maximum arity of predicates. 
 
+A thorough explanation of learning conditional effects using hypergraphs is given in Appendix~\ref{sec:app:hypergraph}, and we will summarize the most important findings here. We have explored two different approaches to using hypergraphs, which both come with their own trade-offs.
+
+
+
 \begin{figure}
     \centering
     \begin{subfigure}[t]{0.30\textwidth}
